[Feature] add for new

--- a/cache-core/pom.xml
+++ b/cache-core/pom.xml
@@ -23,6 +23,10 @@
             <groupId>com.github.houbb</groupId>
             <artifactId>heaven</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.github.houbb</groupId>
+            <artifactId>aop-core</artifactId>
+        </dependency>
 
         <!--============================== OTHER ==============================-->
     </dependencies>
