--- a/cache-core/pom.xml
+++ b/cache-core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>cache</artifactId>
         <groupId>com.github.houbb</groupId>
-        <version>0.0.8-SNAPSHOT</version>
+        <version>0.0.8</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -33,6 +33,10 @@
         </dependency>
 
         <!--============================== OTHER ==============================-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
