--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>com.github.houbb</groupId>
     <artifactId>cache</artifactId>
     <packaging>pom</packaging>
-    <version>0.0.10-SNAPSHOT</version>
+    <version>0.0.10</version>
     <modules>
         <module>cache-api</module>
         <module>cache-core</module>
@@ -33,7 +33,7 @@
         <project.compiler.level>1.7</project.compiler.level>
 
         <!--============================== INTER ==============================-->
-        <heaven.version>0.1.116</heaven.version>
+        <heaven.version>0.1.117</heaven.version>
         <test.version>0.0.1</test.version>
         <aop.version>0.0.3</aop.version>
         <log-integration.version>1.1.8</log-integration.version>
